# penelope_utopia

./: .gitignore  README.md  pyproject.toml
debrand/: LICENSE  manage.py
debrand/debrand/: asgi.py  settings.py  urls.py  wsgi.py
debrand/debrand_game/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
debrand/debrand_game/migrations/: 0001_initial.py  0002_auto_20200216_2009.py  0003_auto_20200216_2013.py  0004_level_img_src.py  0005_auto_20200216_2236.py  0006_auto_20200217_1723.py  0007_level_sidebar.py  0008_level_img_attribution.py  0009_auto_20200217_2148.py  0010_auto_20200217_2205.py
debrand/debrand_game/templates/: char_customize.html  leaderboard.html  level.html
debrand/static/css/: app.css
debrand/templates/: base.html  template_of_templates.html  titlepage.html
debrand/templates/widgets/: base_footer.html  base_navbar.html
