[tool.poetry]
name = "debranding"
version = "0.1.1"
description = ""
authors = ["Stuart Leitch <Toruitas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1"
cookiecutter = "^1.7"
martor = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
